--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>   
        
        <div class="section-presentacion">
-            <img id="cora" src="corazon_0.jpg" alt="portada">
+            <img id="cora" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.123rf.com%2Fphoto_71079523_vector-del-coraz%25C3%25B3n-del-dibujo-bonito-del-arte.html&psig=AOvVaw0yvzHSmksBd83iuBMweKYE&ust=1696083327818000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJDYjPSA0IEDFQAAAAAdAAAAABAE" alt="portada">
             <div class="mipresentacion">
                 <h2>sobre Mi</h2><br>   
                 <p>Hola, mi nombres es brayan rico, tengo 25 años y y vuelvo a probar lo basico de html</p>
